--- a/TelaInicial/style.css
+++ b/TelaInicial/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cookie&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
 
 body {
     background-color: #fff;
@@ -8,17 +9,21 @@ body {
 }
 
 .header {
-    background-color: whitesmoke;
+    background-color: whitesmoke; /* Cor de fundo mais escura para o header */
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px;
 }
 
+
 .logo {
     font-family: 'Cookie', cursive;
-    font-size: 45px;
+    font-size: 60px; /* Tamanho aumentado */
     font-weight: 700;
+    background-image: linear-gradient(45deg, #FF0055, #05c8c8);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .logout-btn {
@@ -40,4 +45,56 @@ body {
 .logout-btn:focus {
     background-color: #FF0000; /* Vermelho padrão */
     box-shadow: 0px 0px 10px rgba(255, 0, 0, 0.3); /* Efeito sombra aumentado */
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; /* Centralizar as colunas */
+    margin-top: 20px; /* Espaçamento entre o cabeçalho e as divs */
+}
+
+.rectangle {
+    width: 575px; /* Largura fixa para as divs */
+    height: 130px; /* Altura fixa para as divs */
+    display: flex;
+    align-items: center;
+    background-color: #F8F8FF;
+    padding: 20px;
+    border-radius: 10px;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    font-family: 'Ubuntu', sans-serif; /* Aplicando a fonte Ubuntu */
+    margin-right: 10px; /* Espaçamento entre as colunas */
+    margin-bottom: 10px; /* Espaçamento entre as linhas */
+}
+
+.rectangle:nth-child(2n) {
+    margin-right: 0; /* Remover espaçamento à direita das colunas pares */
+}
+
+.rectangle:hover,
+.rectangle:focus {
+    background-color: #E6E6FA;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+}
+
+.rectangle:hover .emoji,
+.rectangle:focus .emoji {
+    color: red; /* Altera a cor do emoji durante o hover e o focus */
+}
+
+.emoji {
+    font-size: 40px;
+    margin-right: 10px; /* Espaçamento entre o emoji e o conteúdo */
+}
+
+.title {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.explanation {
+    font-size: 14px;
+    text-align: left; /* Alinhamento à esquerda */
 }
