--- a/style.css
+++ b/style.css
@@ -31,8 +31,12 @@ body {
 
 .titulo {
     margin-bottom: 20px;
-    font-family: 'Cookie', cursive;
     font-size: 50px;
+    font-family: 'Cookie', cursive;
+    font-weight: 700;
+    background-image: linear-gradient(45deg, #FF0055, #05c8c8);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .content h2 {
