--- a/TelaInicial/style.css
+++ b/TelaInicial/style.css
@@ -21,7 +21,7 @@ body {
     font-family: 'Cookie', cursive;
     font-size: 60px; /* Tamanho aumentado */
     font-weight: 700;
-    background-image: linear-gradient(45deg, #FF0055, #05c8c8);
+    background-image: linear-gradient(45deg, #ff003c, #d8df07);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
