--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
     font-size: 50px;
     font-family: 'Cookie', cursive;
     font-weight: 700;
-    background-image: linear-gradient(45deg, #FF0055, #05c8c8);
+    background-image: linear-gradient(45deg, #ff003c, #d8df07);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
