--- a/TelaInicial/style.css
+++ b/TelaInicial/style.css
@@ -24,7 +24,9 @@ body {
     background-image: linear-gradient(45deg, #ff003c, #d8df07);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    margin: auto; /* Centraliza horizontalmente */
 }
+
 
 .logout-btn {
     font-weight: bold;
@@ -97,4 +99,32 @@ body {
 .explanation {
     font-size: 14px;
     text-align: left; /* Alinhamento à esquerda */
+}
+
+.back-btn {
+    font-weight: bold;
+    background-color: #2E8B57; /* Cor verde mais escura */
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    padding: 8px 12px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease; /* Transições para background-color e color */
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2); /* Efeito sombra */
+    margin-left: 20px;
+}
+
+.back-btn:hover,
+.back-btn:focus {
+    background-color: #3CB371; /* Cor verde mais clara ao passar o mouse */
+    color: white;
+    box-shadow: 0px 0px 10px rgba(0, 128, 0, 0.3); /* Efeito sombra aumentado */
+}
+
+.titulodapag{
+    font-weight: bold;
+    font-family: Roboto;
+    text-align: center;    
 }
