--- a/TelaInicial/CadastroeGerenciamentodeDados/transportadoras/transportadorascadastrar/styles.css
+++ b/TelaInicial/CadastroeGerenciamentodeDados/transportadoras/transportadorascadastrar/styles.css
@@ -67,3 +67,74 @@ body {
   margin: 0;
   padding: 0;
 }
+
+form {
+  margin-top: 20px;
+}
+  
+  label {
+    display: block;
+    margin-top: 10px;
+    font-weight: bold;
+  }
+  
+  input[type="text"],
+  input[type="email"],
+  input[type="tel"],
+  select {
+    width: 97.7%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-bottom: 10px;
+    font-size: 16px;
+  }
+
+  .button-container {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .button-container button[type="submit"] {
+    text-align: center;
+    font-weight: bold;
+    background-color: #2E8B57;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    padding: 8px 12px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  }
+  
+  
+  button[type="submit"]:hover,
+  button[type="submit"]:focus {
+    background-color: #3CB371;
+    color: white;
+    box-shadow: 0px 0px 10px rgba(0, 128, 0, 0.3);
+  }
+
+  .container {
+    background-color: #F8F8FF;
+    border-radius: 10px;
+    margin: 20px auto;
+    padding: 20px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+    width: 80%;
+    display: flex;
+    flex-direction: column; /* Adiciona flex-direction: column */
+    justify-content: center;
+    align-items: center;
+  }
+  
+  
+  h1{
+    font-size: 24px;
+    margin-bottom: 20px;
+    text-align: center;
+    font-family: ubuntu;
+  }
